lib/pdfio_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/pdfio.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class PdfioBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  PdfioBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  PdfioBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Functions...
  int pdfioArrayAppendArray(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<pdfio_array_t> value,
  ) {
    return _pdfioArrayAppendArray(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<pdfio_array_t>)>>('pdfioArrayAppendArray');
  late final _pdfioArrayAppendArray = _pdfioArrayAppendArrayPtr.asFunction<
      int Function(ffi.Pointer<pdfio_array_t>, ffi.Pointer<pdfio_array_t>)>();

  int pdfioArrayAppendBinary(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<ffi.UnsignedChar> value,
    int valuelen,
  ) {
    return _pdfioArrayAppendBinary(
      a,
      value,
      valuelen,
    );
  }

  late final _pdfioArrayAppendBinaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Int)>>('pdfioArrayAppendBinary');
  late final _pdfioArrayAppendBinary = _pdfioArrayAppendBinaryPtr.asFunction<
      int Function(
          ffi.Pointer<pdfio_array_t>, ffi.Pointer<ffi.UnsignedChar>, int)>();

  int pdfioArrayAppendBoolean(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<bool> value,
  ) {
    return _pdfioArrayAppendBoolean(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendBooleanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<bool>)>>('pdfioArrayAppendBoolean');
  late final _pdfioArrayAppendBoolean = _pdfioArrayAppendBooleanPtr.asFunction<
      int Function(ffi.Pointer<pdfio_array_t>, ffi.Pointer<bool>)>();

  int pdfioArrayAppendDate(
    ffi.Pointer<pdfio_array_t> a,
    int value,
  ) {
    return _pdfioArrayAppendDate(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendDatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<pdfio_array_t>, time_t)>>('pdfioArrayAppendDate');
  late final _pdfioArrayAppendDate = _pdfioArrayAppendDatePtr
      .asFunction<int Function(ffi.Pointer<pdfio_array_t>, int)>();

  int pdfioArrayAppendDict(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<pdfio_dict_t> value,
  ) {
    return _pdfioArrayAppendDict(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendDictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<pdfio_dict_t>)>>('pdfioArrayAppendDict');
  late final _pdfioArrayAppendDict = _pdfioArrayAppendDictPtr.asFunction<
      int Function(ffi.Pointer<pdfio_array_t>, ffi.Pointer<pdfio_dict_t>)>();

  int pdfioArrayAppendName(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioArrayAppendName(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioArrayAppendName');
  late final _pdfioArrayAppendName = _pdfioArrayAppendNamePtr.asFunction<
      int Function(ffi.Pointer<pdfio_array_t>, ffi.Pointer<ffi.Char>)>();

  int pdfioArrayAppendNumber(
    ffi.Pointer<pdfio_array_t> a,
    double value,
  ) {
    return _pdfioArrayAppendNumber(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendNumberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Double)>>('pdfioArrayAppendNumber');
  late final _pdfioArrayAppendNumber = _pdfioArrayAppendNumberPtr
      .asFunction<int Function(ffi.Pointer<pdfio_array_t>, double)>();

  int pdfioArrayAppendObj(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<pdfio_obj_t> value,
  ) {
    return _pdfioArrayAppendObj(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<pdfio_obj_t>)>>('pdfioArrayAppendObj');
  late final _pdfioArrayAppendObj = _pdfioArrayAppendObjPtr.asFunction<
      int Function(ffi.Pointer<pdfio_array_t>, ffi.Pointer<pdfio_obj_t>)>();

  int pdfioArrayAppendString(
    ffi.Pointer<pdfio_array_t> a,
    ffi.Pointer<ffi.Char> value,
  ) {
    return _pdfioArrayAppendString(
      a,
      value,
    );
  }

  late final _pdfioArrayAppendStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<pdfio_array_t>,
              ffi.Pointer<ffi.Char>)>>('pdfioArrayAppendString');
  late final _pdfioArrayAppendString = _pdfioArrayAppendStringPtr.asFunction<
      int Function(ffi.Pointer<pdfio_array_t>, ffi.Pointer<ffi.Char>)>();

  ffi.Pointer<pdfio_array_t> pdfioArrayCopy(
    ffi.Pointer<pdfio_file_t> pdf,
    ffi.Pointer<pdfio_array_t> a,
  ) {
    return _pdfioArrayCopy(
      pdf,
      a,
    );
  }

  late final _pdfioArrayCopyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_array_t> Function(ffi.Pointer<pdfio_file_t>,
              ffi.Pointer<pdfio_array_t>)>>('pdfioArrayCopy');
  late final _pdfioArrayCopy = _pdfioArrayCopyPtr.asFunction<
      ffi.Pointer<pdfio_array_t> Function(
          ffi.Pointer<pdfio_file_t>, ffi.Pointer<pdfio_array_t>)>();

  ffi.Pointer<pdfio_array_t> pdfioArrayCreate(
    ffi.Pointer<pdfio_file_t> pdf,
  ) {
    return _pdfioArrayCreate(
      pdf,
    );
  }

  late final _pdfioArrayCreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_array_t> Function(
              ffi.Pointer<pdfio_file_t>)>>('pdfioArrayCreate');
  late final _pdfioArrayCreate = _pdfioArrayCreatePtr.asFunction<
      ffi.Pointer<pdfio_array_t> Function(ffi.Pointer<pdfio_file_t>)>();

  ffi.Pointer<pdfio_array_t> pdfioArrayGetArray(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetArray(
      a,
      n,
    );
  }

  late final _pdfioArrayGetArrayPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_array_t> Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetArray');
  late final _pdfioArrayGetArray = _pdfioArrayGetArrayPtr.asFunction<
      ffi.Pointer<pdfio_array_t> Function(ffi.Pointer<pdfio_array_t>, int)>();

  ffi.Pointer<ffi.UnsignedChar> pdfioArrayGetBinary(
    ffi.Pointer<pdfio_array_t> a,
    int n,
    ffi.Pointer<ffi.Int> length,
  ) {
    return _pdfioArrayGetBinary(
      a,
      n,
      length,
    );
  }

  late final _pdfioArrayGetBinaryPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.UnsignedChar> Function(ffi.Pointer<pdfio_array_t>,
              ffi.Int, ffi.Pointer<ffi.Int>)>>('pdfioArrayGetBinary');
  late final _pdfioArrayGetBinary = _pdfioArrayGetBinaryPtr.asFunction<
      ffi.Pointer<ffi.UnsignedChar> Function(
          ffi.Pointer<pdfio_array_t>, int, ffi.Pointer<ffi.Int>)>();

  int pdfioArrayGetBoolean(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetBoolean(
      a,
      n,
    );
  }

  late final _pdfioArrayGetBooleanPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetBoolean');
  late final _pdfioArrayGetBoolean = _pdfioArrayGetBooleanPtr
      .asFunction<int Function(ffi.Pointer<pdfio_array_t>, int)>();

  int pdfioArrayGetDate(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetDate(
      a,
      n,
    );
  }

  late final _pdfioArrayGetDatePtr = _lookup<
      ffi.NativeFunction<
          time_t Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetDate');
  late final _pdfioArrayGetDate = _pdfioArrayGetDatePtr
      .asFunction<int Function(ffi.Pointer<pdfio_array_t>, int)>();

  ffi.Pointer<pdfio_dict_t> pdfioArrayGetDict(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetDict(
      a,
      n,
    );
  }

  late final _pdfioArrayGetDictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_dict_t> Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetDict');
  late final _pdfioArrayGetDict = _pdfioArrayGetDictPtr.asFunction<
      ffi.Pointer<pdfio_dict_t> Function(ffi.Pointer<pdfio_array_t>, int)>();

  ffi.Pointer<ffi.Char> pdfioArrayGetName(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetName(
      a,
      n,
    );
  }

  late final _pdfioArrayGetNamePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetName');
  late final _pdfioArrayGetName = _pdfioArrayGetNamePtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_array_t>, int)>();

  double pdfioArrayGetNumber(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetNumber(
      a,
      n,
    );
  }

  late final _pdfioArrayGetNumberPtr = _lookup<
      ffi.NativeFunction<
          ffi.Double Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetNumber');
  late final _pdfioArrayGetNumber = _pdfioArrayGetNumberPtr
      .asFunction<double Function(ffi.Pointer<pdfio_array_t>, int)>();

  ffi.Pointer<pdfio_obj_t> pdfioArrayGetObj(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetObj(
      a,
      n,
    );
  }

  late final _pdfioArrayGetObjPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<pdfio_obj_t> Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetObj');
  late final _pdfioArrayGetObj = _pdfioArrayGetObjPtr.asFunction<
      ffi.Pointer<pdfio_obj_t> Function(ffi.Pointer<pdfio_array_t>, int)>();

  int pdfioArrayGetSize(
    ffi.Pointer<pdfio_array_t> a,
  ) {
    return _pdfioArrayGetSize(
      a,
    );
  }

  late final _pdfioArrayGetSizePtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<pdfio_array_t>)>>(
          'pdfioArrayGetSize');
  late final _pdfioArrayGetSize = _pdfioArrayGetSizePtr
      .asFunction<int Function(ffi.Pointer<pdfio_array_t>)>();

  ffi.Pointer<ffi.Char> pdfioArrayGetString(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetString(
      a,
      n,
    );
  }

  late final _pdfioArrayGetStringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetString');
  late final _pdfioArrayGetString = _pdfioArrayGetStringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(ffi.Pointer<pdfio_array_t>, int)>();

  int pdfioArrayGetType(
    ffi.Pointer<pdfio_array_t> a,
    int n,
  ) {
    return _pdfioArrayGetType(
      a,
      n,
    );
  }

  late final _pdfioArrayGetTypePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(
              ffi.Pointer<pdfio_array_t>, ffi.Int)>>('pdfioArrayGetType');
  late final _pdfioArrayGetType = _pdfioArrayGetTypePtr
      .asFunction<int Function(ffi.Pointer<pdfio_array_t>, int)>();
